--- a/input/template.rdbTransientEDWtab.ejs
+++ b/input/template.rdbTransientEDWtab.ejs
@@ -1,4 +1,4 @@
-@@@FILE:[test/databasify.sql]@@@
+@@@FILE:[test/databasifyTransientEDWtab.sql]@@@
 <% // javascript
 
 const codifyOptions = codifier.DatabaseCodifyOptions
@@ -9,10 +9,17 @@ dbJson.tables.forEach(table => {
 
 %>
 /* ###################################################### */
+--Transient EDW table
+/****** Object:  Table [dbo].[Transient_<%- table.baseName %>_<%- table.baseName %>]    Script Date: 12/31/2021 8:51:04 PM ******/
+SET ANSI_NULLS ON
+GO
 
-CREATE TABLE dbo.[Policy_<%- table.baseName %>] ( 
-  [Policy_<%- table.baseName %>_PK] BIGINT IDENTITY(1,1) NOT NULL,
-  [Policy_<%- table.baseName %>_NK] [varchar](200) NOT NULL,
+SET QUOTED_IDENTIFIER ON
+GO
+
+CREATE TABLE [dbo].[Transient_Policy_<%- table.baseName %>]( 
+  [Policy_<%- table.baseName %>_PK] BIGINT NOT NULL,
+  [Policy_<%- table.baseName %>_NK] [varchar](200) NULL,
 <% // javascript
 
   applyColumnSort(table.columns) // see function at end of script
@@ -41,23 +48,11 @@ CREATE TABLE dbo.[Policy_<%- table.baseName %>] (
 [Generated_Record_Ind] [int] NULL,
 [Change_HASH] [binary](32) NULL,
 [Source_System_Code] [varchar](100) NULL
-<%- // javascript
-  pkColumns.length > 0 ?  ` 
+) ON [PRIMARY]
+GO
+
+<% // javascript
   
-  CONSTRAINT [Policy_${table.baseName}_PK] PRIMARY KEY CLUSTERED 
-   ( 
-   ${ pkColumns.join(",") } ASC )
-  WITH (PAD_INDEX = OFF, STATISTICS_NORECOMPUTE = OFF, IGNORE_DUP_KEY = OFF, ALLOW_ROW_LOCKS = ON, ALLOW_PAGE_LOCKS = ON) ON [PRIMARY]) ON [PRIMARY] 
-  \n` : null
-%>;
-<% // javascript
-  if(grainColumns.length > 0) {
-%>
-CREATE UNIQUE INDEX UX_<%- table.baseName -%>_GRAIN ON [Policy_<%= table.baseName %>] (
-  <%- grainColumns.join(",") %>
-);
-<% // javascript
-  }
 })
 
 function applyColumnSort(columns) {
