--- a/input/template.rdb.ejs
+++ b/input/template.rdb.ejs
@@ -6,22 +6,25 @@ const codifyOptions = codifier.DatabaseCodifyOptions
 const databaseOptions = databasifier.SqlServerDatabaseOptions
 const dbJson = databasifier.getDatabaseJson(project, codifyOptions, databaseOptions)
 
-const codifyText = (text, excludeWrapper = false) => {
-  return codifier.codifyText(text, codifyOptions, excludeWrapper)
-}
-
 dbJson.tables.forEach(table => {
 
-  const domain = table.tagProperties?.domain
-  const tableNameUnwrapped = codifyText(domain ? domain.concat("_", table.baseName) : table.baseName, true)
-  const grainColumns = table.columns.filter(c => c.grain === true && !(c.primary === true)).map(c => c.name) ?? []
+  const tableName = codifier.codifyText(
+        table.domain ? table.domain.concat("_", table.name) : table.name,
+        codifyOptions
+  )
+
+  const pkColumName = tableName.concat("_", databaseOptions.primaryKeyDescriptor)
+  const nkColumName = tableName.concat("_", databaseOptions.naturalKeyDescriptor)
+  const grainColumns = table.columns
+    .filter(c => c.grain === true)
+    .map(c => c.name) ?? []
 
 %>
 /* ###################################################### */
 
-CREATE TABLE dbo.[<%- tableNameUnwrapped %>] (
-  [<%- tableNameUnwrapped.concat("_", databaseOptions.primaryKeyDescriptor) %>] BIGINT IDENTITY(1,1) NOT NULL
-, [<%- tableNameUnwrapped.concat("_", databaseOptions.naturalKeyDescriptor) %>] [varchar](200) NOT NULL
+CREATE TABLE dbo.[<%- tableName %>] (
+  [<%- pkColumName %>] BIGINT IDENTITY(1,1) NOT NULL
+, [<%- nkColumName %>] VARCHAR(200) NOT NULL
 <% // javascript
 
   applyColumnSort(table.columns) // see function at end of script
@@ -34,19 +37,19 @@ CREATE TABLE dbo.[<%- tableNameUnwrapped %>] (
 
   })
 
-%>, [BUSINESS_EFFECTIVE_BEGIN_DATETIME] [DATETIME2](7) NULL
-, [BUSINESS_EFFECTIVE_END_DATETIME] [DATETIME2](7) NULL
-, [RECORD_VALID_BEGIN_DATETIME] [DATETIME2](7) NULL
-, [RECORD_VALID_END_DATETIME] [DATETIME2](7) NULL
-, [ENTERED_DATETIME] [DATETIME2](7) NULL
-, [UPDATED_DATETIME] [DATETIME2](7) NULL
-, [BATCH_ID] [VARCHAR](200) NULL
-, [INVALIDATED_BATCH_ID] [VARCHAR](200) NULL
-, [INTRA_BATCH_LOOP_SEQUENCE] [INT] NULL
-, [GENERATED_RECORD_IND] [INT] NULL
-, [CHANGE_HASH] [BINARY](32) NULL
-, [SOURCE_SYSTEM_CODE] [VARCHAR](100) NULL
-, CONSTRAINT [PK_<%- tableNameUnwrapped %>] PRIMARY KEY CLUSTERED ([<%- tableNameUnwrapped.concat("_", databaseOptions.primaryKeyDescriptor) %>] ASC)
+%>, [BUSINESS_EFFECTIVE_BEGIN_DATETIME] DATETIME2(7) NULL
+, [BUSINESS_EFFECTIVE_END_DATETIME] DATETIME2(7) NULL
+, [RECORD_VALID_BEGIN_DATETIME] DATETIME2(7) NULL
+, [RECORD_VALID_END_DATETIME] DATETIME2(7) NULL
+, [ENTERED_DATETIME] DATETIME2(7) NULL
+, [UPDATED_DATETIME] DATETIME2(7) NULL
+, [BATCH_ID] VARCHAR(200) NULL
+, [INVALIDATED_BATCH_ID] VARCHAR(200) NULL
+, [INTRA_BATCH_LOOP_SEQUENCE] INT NULL
+, [GENERATED_RECORD_IND] INT NULL
+, [CHANGE_HASH] BINARY(32) NULL
+, [SOURCE_SYSTEM_CODE] VARCHAR(100) NULL
+, CONSTRAINT [PK_<%- tableName %>] PRIMARY KEY CLUSTERED ([<%- pkColumName %>] ASC)
 ) WITH (
   PAD_INDEX = OFF
 , STATISTICS_NORECOMPUTE = OFF
@@ -58,8 +61,8 @@ CREATE TABLE dbo.[<%- tableNameUnwrapped %>] (
 <% // javascript
   if(grainColumns.length > 0) {
 %>
-CREATE UNIQUE INDEX [UX_<%- tableNameUnwrapped %>_GRAIN] ON [<%- tableNameUnwrapped %>] (
-  <%- grainColumns.join(",") %>
+CREATE UNIQUE INDEX [UX_<%- tableName %>_GRAIN] ON [<%- tableName %>] (
+  <%- `[${grainColumns.join("], [")}]` %>
 );
 <% // javascript
   }
