--- a/input/template.staruml.ejs
+++ b/input/template.staruml.ejs
@@ -1,11 +1,12 @@
 @@@FILE:[test/<%- project.name %>.mdj]@@@
 <% // javascript
  const UmlModelEntitiesId = "Entities-".concat(project.id)
+ const escape = jsonHelper.escape
 %> 
 {
   "_type": "Project",
   "_id": "<%- project.id %>",
-  "name": "<%- project.name %>",
+  "name": "<%- escape(project.name) %>",
   "ownedElements": [
       {
           "_type": "UMLModel",
@@ -14,6 +15,7 @@
               "$ref": "<%- project.id %>"
           },
           "name": "Entities",
+          "documentation": "<%- escape(project.definition) %>",
           "ownedElements": [
             {
                 "_type": "UMLClassDiagram",
@@ -36,14 +38,15 @@
         "_parent": {
             "$ref": "<%- project.id %>"
         },
-        "name": "<%- entity.name %>",
+        "name": "<%- escape(entity.name) %>",
+        "documentation":  "<%- escape(entity.definition) %>",
         "attributes": [
         
 <% // javascript
 
     applyAttributeSort(entity.attributes) // see function at end of script
     entity.attributes.forEach((attribute, attributeIndex) => {
-        const ac = project.attributeClasses.find(x => x.id === attribute.attributeClass?.id)
+        const ac = project.attributeClasses.find(x => x.id === attribute?.return?.attributeClassId)
         
 %>
 <%# Render the Attribute as UMLAttribute  %>
@@ -54,21 +57,22 @@
                 "_parent": {
                     "$ref": "<%- entity.id %>"
                 },
-                "name": "<%- attribute.name %>"
+                "name": "<%- escape(attribute.name) %>",
+                "documentation": "<%- escape(attribute.definition) %>"
 <% // javascript
 
-    if(ac.reference === true && !!attribute.attributeClass?.entityId) { 
+    if(attribute?.return?.reference === true && !!attribute?.return?.entityId) { 
 
 %><%# Render the Attribute Class Reference as Stereotype  %>
                 , "stereotype": {
-                  "$ref": "<%- attribute.attributeClass.entityId %>"
+                  "$ref": "<%- attribute.return.entityId %>"
                 }
 <% // javascript
 
-    } else if(ac.scalar?.length > 0) {
+    } else if(ac?.scalar) {
 
 %><%# Render the Attribute Class Type as Type  %>
-              , "type": "<%- ac.scalar?.type %>"
+              , "type": "<%- escape(ac.scalar) %>"
 <% // javascript
     }
 %><%# Close the UMLAttribute  %>
@@ -93,7 +97,8 @@
             "_parent": {
                 "$ref": "<%- UmlModelEntitiesId %>"
             },
-            "name": "<%- entity.pluralName ?? entity.name.concat(" Instances") %>",
+            "name": "<%- escape(entity.pluralName ?? entity.name.concat(" Instances")) %>",
+            "documentation": "Instances of <%- escape(entity.name) %>.",
             "stereotype": {
                 "$ref": "<%- entity.id %>"
             },
@@ -108,7 +113,8 @@
                     "_parent": {
                         "$ref": "<%- entity.id %>"
                     },
-                    "name": "<%- instance.name %>"
+                    "name": "<%- escape(instance.name) %>",
+                    "documentation": "<%- escape(instance.definition) %>"
                 }
 <% // javascript
         }) // END entity.instance.forEach
