--- a/input/template.rdb.ejs
+++ b/input/template.rdb.ejs
@@ -1,66 +1,68 @@
 @@@FILE:[test/databasify.sql]@@@
 <% // javascript
 
+
 const codifyOptions = codifier.DatabaseCodifyOptions
 const databaseOptions = databasifier.SqlServerDatabaseOptions
-const tagPrefixes = ['domain','transition','bitemporal']
-const dbJson = databasifier.getDatabaseJson(project, codifyOptions, databaseOptions, tagPrefixes)
+const dbJson = databasifier.getDatabaseJson(project, codifyOptions, databaseOptions)
 
 dbJson.tables.forEach(table => {
 
-  const domain = codifier.codifyText(table.domain, codifyOptions, true)
-  const bitemporal = (table.bitemporal === "true")
-  const transition = (table.transition === "true")
+  const tableName = codifier.codifyText(
+        table.domain ? table.domain.concat("_", table.name) : table.name,
+        codifyOptions
+  )
+
+  const pkColumName = tableName.concat("_", databaseOptions.primaryKeyDescriptor)
+  const nkColumName = tableName.concat("_", databaseOptions.naturalKeyDescriptor)
+  const grainColumns = table.columns
+    .filter(c => c.grain === true)
+    .map(c => c.name) ?? []
 
 %>
 /* ###################################################### */
 
-CREATE TABLE dbo.[<%- domain ? domain.concat("_") : null %><%- table.baseName %>] (
-  [<%- domain ? domain.concat("_") : null %><%- table.baseName %>_PK] BIGINT IDENTITY(1,1) NOT NULL,
-  [<%- domain ? domain.concat("_") : null %><%- table.baseName %>_NK] [varchar](200) NOT NULL,
-  [<%- domain ? domain.concat("_") : null %><%- table.baseName %>_FK] [varchar](200) NOT NULL,
+CREATE TABLE dbo.[<%- tableName %>] (
+  [<%- pkColumName %>] BIGINT IDENTITY(1,1) NOT NULL
+, [<%- nkColumName %>] VARCHAR(200) NOT NULL
 <% // javascript
 
   applyColumnSort(table.columns) // see function at end of script
   table.columns.forEach((column, columnIndex) => {
 
-%><%- columnIndex > 0 ? "," : " " 
-%><%- " ".concat(column.name) 
-%><%- " ".concat(column.dataType) 
+%>,<%- ` [${column.name}]`
+%><%-  ` ${column.dataType}`
 %><%- column.required ? " NOT NULL" : null %>
 <% // javascript
-  
+
   })
 
-  const pkColumns = table.columns.filter(c => c.primary === true).map(c => c.name) ?? []
-  const grainColumns = table.columns.filter(c => c.grain === true && !(c.primary === true)).map(c => c.name) ?? []
+%>, [BUSINESS_EFFECTIVE_BEGIN_DATETIME] DATETIME2(7) NULL
+, [BUSINESS_EFFECTIVE_END_DATETIME] DATETIME2(7) NULL
+, [RECORD_VALID_BEGIN_DATETIME] DATETIME2(7) NULL
+, [RECORD_VALID_END_DATETIME] DATETIME2(7) NULL
+, [ENTERED_DATETIME] DATETIME2(7) NULL
+, [UPDATED_DATETIME] DATETIME2(7) NULL
+, [BATCH_ID] VARCHAR(200) NULL
+, [INVALIDATED_BATCH_ID] VARCHAR(200) NULL
+, [INTRA_BATCH_LOOP_SEQUENCE] INT NULL
+, [GENERATED_RECORD_IND] INT NULL
+, [CHANGE_HASH] BINARY(32) NULL
+, [SOURCE_SYSTEM_CODE] VARCHAR(100) NULL
+, CONSTRAINT [PK_<%- tableName %>] PRIMARY KEY CLUSTERED ([<%- pkColumName %>] ASC)
+) WITH (
+  PAD_INDEX = OFF
+, STATISTICS_NORECOMPUTE = OFF
+, IGNORE_DUP_KEY = OFF
+, ALLOW_ROW_LOCKS = ON
+, ALLOW_PAGE_LOCKS = ON
+) ON [PRIMARY]
 
-%>,[BUSINESS_EFFECTIVE_BEGIN_DATETIME] [DATETIME2](7) NULL,
-[BUSINESS_EFFECTIVE_END_DATETIME] [DATETIME2](7) NULL,
-[RECORD_VALID_BEGIN_DATETIME] [DATETIME2](7) NULL,
-[RECORD_VALID_END_DATETIME] [DATETIME2](7) NULL,
-[ENTERED_DATETIME] [DATETIME2](7) NULL,
-[UPDATED_DATETIME] [DATETIME2](7) NULL,
-[BATCH_ID] [VARCHAR](200) NULL,
-[INVALIDATED_BATCH_ID] [VARCHAR](200) NULL,
-[INTRA_BATCH_LOOP_SEQUENCE] [INT] NULL,
-[GENERATED_RECORD_IND] [INT] NULL,
-[CHANGE_HASH] [BINARY](32) NULL,
-[SOURCE_SYSTEM_CODE] [VARCHAR](100) NULL
-<%- // javascript
-  pkColumns.length > 0 ?  ` 
-
-  CONSTRAINT [${domain ? domain.concat("_") : null}${table.baseName}_PK] PRIMARY KEY CLUSTERED 
-   ( 
-   ${ pkColumns.join(",") } ASC )
-  WITH (PAD_INDEX = OFF, STATISTICS_NORECOMPUTE = OFF, IGNORE_DUP_KEY = OFF, ALLOW_ROW_LOCKS = ON, ALLOW_PAGE_LOCKS = ON) ON [PRIMARY]) ON [PRIMARY] 
-  \n` : null
-%>;
 <% // javascript
   if(grainColumns.length > 0) {
 %>
-CREATE UNIQUE INDEX UX_<%- table.baseName -%>_GRAIN ON [<%- domain ? domain.concat("_") : null %><%= table.baseName %>] (
-  <%- grainColumns.join(",") %>
+CREATE UNIQUE INDEX [UX_<%- tableName %>_GRAIN] ON [<%- tableName %>] (
+  <%- `[${grainColumns.join("], [")}]` %>
 );
 <% // javascript
   }
